Updated CTA as per document

--- a/admin/assets/css/ehf-admin.css
+++ b/admin/assets/css/ehf-admin.css
@@ -851,7 +851,7 @@ padding-left:12px!important
 }
 
 .uae-plugins-go-pro{
-    color: #6104ff;
+    color: #93003C;
     font-weight: 700;
 }
 
@@ -859,6 +859,6 @@ padding-left:12px!important
 .uae-plugins-go-pro:focus,
 .uae-plugins-go-pro:hover
 {
-    color:#6104ff;
+    color:#93003C;
     opacity:.8;
 }
