--- a/admin/assets/css/ehf-admin.css
+++ b/admin/assets/css/ehf-admin.css
@@ -862,3 +862,35 @@ padding-left:12px!important
     color:#6104ff;
     opacity:.8;
 }
+
+/* Rating Stars in Plugin List - Remove all borders and outlines */
+tr[data-plugin*="header-footer-elementor"] a[href*="reviews"],
+tr[data-plugin*="header-footer-elementor"] a[href*="reviews"]:focus,
+tr[data-plugin*="header-footer-elementor"] a[href*="reviews"]:active,
+tr[data-plugin*="header-footer-elementor"] a[href*="reviews"]:hover,
+.plugin-description-actions a[href*="reviews"],
+.plugin-description-actions a[href*="reviews"]:focus,
+.plugin-description-actions a[href*="reviews"]:active,
+.plugin-description-actions a[href*="reviews"]:hover {
+    text-decoration: none !important;
+    outline: 0 !important;
+    outline: none !important;
+    border: 0 !important;
+    border: none !important;
+    box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    background: transparent !important;
+    display: inline-block;
+    margin-left: 5px;
+}
+
+tr[data-plugin*="header-footer-elementor"] a[href*="reviews"]:hover,
+.plugin-description-actions a[href*="reviews"]:hover {
+    opacity: 0.8;
+}
+
+tr[data-plugin*="header-footer-elementor/header-footer-elementor.php"] .plugin-description-actions a[href*="reviews"] .dashicons {
+    vertical-align: top;
+    margin: 0 1px;
+}
