--- a/inc/widgets-css/frontend.css
+++ b/inc/widgets-css/frontend.css
@@ -1,3 +1,68 @@
+/* Counter Widget CSS */
+.hfe-counter-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.hfe-counter-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.hfe-counter-number {
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 1;
+}
+
+.hfe-counter-title {
+    font-size: 18px;
+    line-height: 1.2;
+    margin: 0;
+}
+
+.hfe-counter-prefix,
+.hfe-counter-suffix {
+    font-size: inherit;
+    line-height: inherit;
+}
+
+.hfe-counter-prefix {
+    margin-right: 5px;
+}
+
+.hfe-counter-suffix {
+    margin-left: 5px;
+}
+
+
+/* Title styling */
+.hfe-counter-title {
+    margin: 0;
+    text-align: center;
+    flex-shrink: 0;
+}
+
+/* Ensure counter content doesn't shrink */
+.hfe-counter-content {
+    flex-shrink: 0;
+}
+
+/* Responsive adjustments */
+@media (max-width: 767px) {
+    .hfe-counter-number {
+        font-size: 36px;
+    }
+    
+    .hfe-counter-title {
+        font-size: 16px;
+    }
+}
+
 /* Navigation Menu CSS */
 
 ul.hfe-nav-menu,
